# AgentCalendarDatapizza

./: .env.example  .gitignore  README.md  architecture.md  pyproject.toml  requirements.txt
calendar_agent/: __init__.py  __main__.py  agent.py  cache.py  response_models.py  telemetry.py  timeparse.py  tools.py  utils.py
tests/: test_cache.py  test_logic.py  test_smoke.py  test_structured_tool_outputs.py
